--- a/flexUtilities.html
+++ b/flexUtilities.html
@@ -4,8 +4,122 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flex In Bootstrap</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    
+    <!-- <h1>Flexbox And Aligment Utilities</h1> -->
+    <!-- <div class="d-flex justify-content-around"> -->
+        <!-- <div class="d-flex flex-column flex-md-row justify-content-md-center bg-secondary align-items-center" style="height: 300px;">
+            <div class="p-3 bg-primary text-light order-3">Card 3</div>
+            <div class="p-3 bg-primary text-light order-1">Card 1</div>
+            <div class="p-3 bg-primary text-light order-4">Card 4</div>
+            <div class="p-3 bg-primary text-light order-2">Card 2</div>
+        </div> -->
+
+        <!-- Accordion  -->
+        <!-- <h2>Accordion and Collapse</h2>
+         <div class="accordion">
+            <div class="accordion-item">
+                <div class="accordion-header">
+                    <button data-bs-target="#collapseOne" data-bs-toggle="collapse" class="accordion-button">
+                        <h2>What is Bootstrap ?</h2>
+                    </button>
+                </div>
+                <div id="collapseOne" class="accordion-collapse collapse show">
+                    <div class="accordion-body">
+                        <p>Bootstrap is a Css framework used to design responsive website.</p>
+                    </div>
+                </div>
+            </div>
+              <div class="accordion-item">
+                <div class="accordion-header">
+                    <button data-bs-target="#collapseTwo" data-bs-toggle="collapse" class="accordion-button">
+                        <h2>What is Bootstrap ?</h2>
+                    </button>
+                </div>
+                <div id="collapseTwo" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        <p>Bootstrap is a Css framework used to design responsive website.</p>
+                    </div>
+                </div>
+                
+            </div>
+         </div> -->
+
+         <!-- Spinners and Progress bar -->
+          <!-- <h1>Spinners and Progress bar</h1>
+          <div class="d-flex justify-content-center py-5">
+            <div class="spinner-border"></div>
+            <div class="spinner-border text-primary"></div>
+            <div class="spinner-border text-success"></div>
+            <div class="spinner-border text-danger"></div>
+          </div>
+
+          <div class="progress">
+            <div class="progress-bar bg-info progress-bar-striped progress-bar-animated"
+                role="progressbar"
+                aria-valuenow="50%"
+                aria-valuemax="100%"
+                aria-valuemin="1%"
+                style="width: 50%;">Downloading 25%....</div>
+          </div> -->
+
+          <!-- Toasts  -->  
+           <!-- <h1>Toasts</h1>
+           <button class="btn btn-primary mb-5" id="liveToastBtn">Show Message</button>
+            <div role="alert" class="toast" id="liveToast">
+                <div class="toast-header">
+                    <img class="rounded-pill" src="https://picsum.photos/20" alt="" srcset="">
+                    <strong class="me-auto">Message Received</strong>
+                    <small>11 mins ago</small>  
+                    <button class="btn-close" type="button" data-bs-dismiss="toast"></button>
+                </div>
+                <div class="toast-body">
+                    Leo das sended you a message
+                </div>
+            </div> -->
+
+            <h1>Carousel</h1>
+            <div id="carouselDiv" class="carousel slide bg-black" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class=" carousel-item active " data-bs-interval="2000">
+                        <div class="d-flex justify-content-center">
+                            <img src="https://picsum.photos/id/12/367/267" alt="" srcset="">
+                        </div>
+                    </div>
+                    <div class=" carousel-item " data-bs-interval="2000">
+                        <div class="d-flex justify-content-center">
+                            <img src="https://picsum.photos/id/14/367/267" alt="" srcset="">
+                        </div>
+                    </div>
+                    <div class=" carousel-item" data-bs-interval="2000">
+                        <div class="d-flex justify-content-center">
+                            <img src="https://picsum.photos/id/16/367/267" alt="" srcset="">
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" data-bs-target="#carouselDiv" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" data-bs-target="#carouselDiv" data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+
+
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+            <script src="https://github.com/twbs/bootstrap/blob/v5.3.8/site/src/assets/partials/snippets.js"></script>
+            <script>
+                const toastTrigger = document.getElementById('liveToastBtn')
+                const toastLiveExample = document.getElementById('liveToast')
+                if (toastTrigger) {
+                    const toastBootstrap = bootstrap.Toast.getOrCreateInstance(toastLiveExample)
+                    toastTrigger.addEventListener('click', () => {
+                        toastBootstrap.show()
+                    })
+                }
+            </script>
 </body>
 </html>
